# teleprompter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  speech.txt  teleprompter.jsx
backend/: README.md  main.py  pyproject.toml
docs/: technical-architecture.md
frontend/: diffUtils.js  freespeech.jsx  index.html  main.jsx  package-lock.json  package.json  shared.jsx  speechUtils.js  speechUtils.test.js  teleprompter.jsx  tutor.jsx  vite.config.js
frontend/public/: site.webmanifest
public/: speech.txt
